--- a/bot/templates/board_viewer.html
+++ b/bot/templates/board_viewer.html
@@ -714,23 +714,14 @@
 
             let prev_positions;
             if (current === 0) {
-                prev_positions = getInitialPositions(inverted);
+                prev_positions = getInitialPositions(!inverted);
             } else {
-                prev_positions = inverted ? data[current - 1].inverted_positions : data[current - 1].positions;
+                prev_positions = !inverted ? data[current - 1].inverted_positions : data[current - 1].positions;
             }
 
             const temp_positions = JSON.parse(JSON.stringify(prev_positions));
 
             let moves = nextTurn.moves || [];
-            // Применять инвертацию только для первого игрока
-            if (inverted && playerType === 'first') {
-                moves = moves.map(m => ({
-                    ...m,
-                    from: invertPoint(m.from),
-                    to: invertPoint(m.to)
-                }));
-            }
-
             // Timeout to reset animating in case of error
             const timeoutId = setTimeout(() => {
                 animating = false;
