--- a/bot/templates/board_viewer.html
+++ b/bot/templates/board_viewer.html
@@ -713,11 +713,11 @@
             const playerType = nextTurn.turn === 'first' ? 'first' : 'second';
 
             let prev_positions;
-            if (current === 0) {
-                prev_positions = getInitialPositions(inverted);
-            } else {
-                prev_positions = inverted ? data[current - 1].inverted_positions : data[current - 1].positions;
-            }
+            // if (current === 0) {
+            //     prev_positions = getInitialPositions(inverted);
+            // } else {
+            //     prev_positions = inverted ? data[current - 1].inverted_positions : data[current - 1].positions;
+            // }
 
             const temp_positions = JSON.parse(JSON.stringify(prev_positions));
 
