--- a/bot/templates/board_viewer.html
+++ b/bot/templates/board_viewer.html
@@ -355,8 +355,8 @@
         function getInitialPositions(inverted) {
             if (inverted) {
                 return {
-                    first: { '1': 2, '12': 5, '17': 3, '19': 5, 'bar': 0, 'off': 0 },
-                    second: { '6': 5, '8': 3, '13': 5, '24': 2, 'bar': 0, 'off': 0 }
+                    first: { '6': 5, '8': 3, '13': 5, '24': 2, 'bar': 0, 'off': 0 },
+                    second: { '1': 2, '12': 5, '17': 3, '19': 5, 'bar': 0, 'off': 0 }
                 };
             } else {
                 return {
@@ -379,7 +379,11 @@
                 positions = getInitialPositions(inverted);
             } else {
                 const prevTurn = current - 1;
-                positions = inverted ? data[prevTurn].inverted_positions : data[prevTurn].positions;
+                if (inverted) {
+                    positions = { first: data[prevTurn].inverted_positions.second, second: data[prevTurn].inverted_positions.first };
+                } else {
+                    positions = data[prevTurn].positions;
+                }
             }
 
             invertColors = inverted;
@@ -476,8 +480,12 @@
             }
 
             const barX = 400;
-            const barY = (player === 'second') ? 220 : 520;
-            const barDy = (player === 'second') ? 55 : -55;
+            let barY = (player === 'second') ? 220 : 520;
+            let barDy = (player === 'second') ? 55 : -55;
+            if (invertColors) {
+                barY = (player === 'second') ? 520 : 220;
+                barDy = (player === 'second') ? -55 : 55;
+            }
             if (positions.bar && positions.bar !== 0) {
                 let y = barY;
                 for (let i = 0; i < Math.min(Math.abs(positions.bar), 6); i++) {
@@ -549,8 +557,12 @@
             const fromStr = move.from.toString();
             if (fromStr === 'bar') {
                 fromX = 400;
-                const barY = (playerType === 'second') ? 220 : 520;
-                const barDy = (playerType === 'second') ? 55 : -55;
+                let barY = (playerType === 'second') ? 220 : 520;
+                let barDy = (playerType === 'second') ? 55 : -55;
+                if (inverted) {
+                    barY = (playerType === 'second') ? 520 : 220;
+                    barDy = (playerType === 'second') ? -55 : 55;
+                }
                 const barCount = player_pos['bar'] || 0;
                 fromY = barY + (barCount - 1) * barDy;
             } else {
@@ -578,6 +590,16 @@
                 toX = 783;
                 toY = invertColors ? (playerType === 'second' ? 440 : 340) : (playerType === 'second' ? 340 : 440);
                 // No stacking for off, fixed position
+            } else if (toStr === 'bar') {
+                toX = 400;
+                let barY = (playerType === 'second') ? 220 : 520;
+                let barDy = (playerType === 'second') ? 55 : -55;
+                if (inverted) {
+                    barY = (playerType === 'second') ? 520 : 220;
+                    barDy = (playerType === 'second') ? -55 : 55;
+                }
+                const barCount = player_pos['bar'] || 0;
+                toY = barY + barCount * barDy;
             } else {
                 const toPoint = parseInt(toStr);
                 toX = getX(toPoint, playerType);
@@ -640,8 +662,12 @@
             let fromY = fromBaseY + (hitCount - 1) * fromDy;
 
             const barX = 400;
-            const barY = (hitPlayerType === 'second') ? 220 : 520;
-            const barDy = (hitPlayerType === 'second') ? 55 : -55;
+            let barY = (hitPlayerType === 'second') ? 220 : 520;
+            let barDy = (hitPlayerType === 'second') ? 55 : -55;
+            if (inverted) {
+                barY = (hitPlayerType === 'second') ? 520 : 220;
+                barDy = (hitPlayerType === 'second') ? -55 : 55;
+            }
             const barCount = opp_pos['bar'] || 0;
             const toY = barY + barCount * barDy; // Position for the hit checker on bar
 
@@ -716,7 +742,11 @@
             if (current === 0) {
                 prev_positions = getInitialPositions(inverted);
             } else {
-                prev_positions = inverted ? data[current - 1].inverted_positions : data[current - 1].positions;
+                if (inverted) {
+                    prev_positions = { first: data[current - 1].inverted_positions.second, second: data[current - 1].inverted_positions.first };
+                } else {
+                    prev_positions = data[current - 1].positions;
+                }
             }
 
             const temp_positions = JSON.parse(JSON.stringify(prev_positions));
