--- a/bot/templates/board_viewer.html
+++ b/bot/templates/board_viewer.html
@@ -356,12 +356,12 @@
             if (inverted) {
                 return {
                     first: { '1': 2, '12': 5, '17': 3, '19': 5, 'bar': 0, 'off': 0 },
-                    second: { '1': 2, '19': 5, '17': 3, '12': 5, 'bar': 0, 'off': 0 }
+                    second: { '6': 5, '8': 3, '13': 5, '24': 2, 'bar': 0, 'off': 0 }
                 };
             } else {
                 return {
                     first: { '24': 2, '6': 5, '8': 3, '13': 5, 'bar': 0, 'off': 0 },
-                    second: { '6': 5, '8': 3, '13': 5, '24': 2, 'bar': 0, 'off': 0 }
+                    second: { '24': 2, '6': 5, '8': 3, '13': 5, 'bar': 0, 'off': 0 },
                 };
             }
         }
