--- a/bot/templates/board_viewer.html
+++ b/bot/templates/board_viewer.html
@@ -505,7 +505,7 @@
         }
 
         function getX(point, playerType = null) {
-            // Инвертирование уже обрабатывается в drawCheckers, не нужно дублировать
+
             let actualPoint = point;
 
             if (actualPoint >= 13 && actualPoint <= 18) {
@@ -536,7 +536,7 @@
 
             invertColors = inverted;
             drawCheckers('first', whiteChecker, positions.first, currentPlayerType);
-            drawCheckers('second', blackChecker, positions.second, currentPlayerType);
+            drawCheckers('second', blackChecker, positions.first, currentPlayerType);
         }
 
         function animateSingleMove(move, playerType, temp_positions, callback) {
