--- a/bot/templates/board_viewer.html
+++ b/bot/templates/board_viewer.html
@@ -534,7 +534,7 @@
             ctx.clearRect(0, 0, canvas.width, canvas.height);
             ctx.drawImage(boardImg, 0, 0, canvas.width, canvas.height);
 
-            invertColors = !inverted;
+            invertColors = inverted;
             drawCheckers('first', whiteChecker, positions.first, currentPlayerType);
             drawCheckers('second', blackChecker, positions.second, currentPlayerType);
         }
@@ -710,7 +710,10 @@
             updateButtons();
 
             const nextTurn = data[current];
-            const playerType = nextTurn.turn === 'first' ? 'first' : 'second';
+            let playerType = nextTurn.turn === 'first' ? 'first' : 'second';
+            if (inverted) {
+                playerType = playerType === 'first' ? 'second' : 'first';
+            }
 
             let prev_positions;
             if (current === 0) {
@@ -719,16 +722,12 @@
                 prev_positions = inverted ? data[current - 1].inverted_positions : data[current - 1].positions;
             }
 
-            const temp_positions = JSON.parse(JSON.stringify(prev_positions));
+            let temp_positions = JSON.parse(JSON.stringify(prev_positions));
+            if (playerType === 'second') {
+                temp_positions = { first: temp_positions.second, second: temp_positions.first };
+            }
 
             let moves = nextTurn.moves || [];
-            if (inverted) {
-                moves = moves.map(move => ({
-                    from: invertPoint(move.from),
-                    to: invertPoint(move.to),
-                    hit: move.hit
-                }));
-            }
             // Timeout to reset animating in case of error
             const timeoutId = setTimeout(() => {
                 animating = false;
