--- a/bot/templates/board_viewer.html
+++ b/bot/templates/board_viewer.html
@@ -213,6 +213,9 @@
         <div class="board-footer">
             <div class="move-info" id="moveInfo">Initial Position</div>
             <div id="controls">
+                <button id="invertBtn" title="Invert Board">
+                    <img src="/static/change_color.png" alt="Invert" style="width: 100%; height: 100%;">
+                </button>
                 <button id="prevBtn" title="Previous Move">
                     <img src="/static/left.png" alt="Previous" style="width: 100%; height: 100%;">
                 </button>
@@ -221,9 +224,6 @@
                 </div>
                 <button id="nextBtn" title="Next Move">
                     <img src="/static/right.png" alt="Next" style="width: 100%; height: 100%;">
-                </button>
-                <button id="invertBtn" title="Invert Board">
-                    <img src="/static/change_color.png" alt="Invert" style="width: 100%; height: 100%;">
                 </button>
             </div>
         </div>
@@ -543,13 +543,43 @@
             return (point > 12) ? 55 : -55;
         }
 
-        function drawBoardForAnimation(positions, currentPlayerType) {
+        function drawBoardForAnimation(positions, currentPlayerType, item = null) {
             ctx.clearRect(0, 0, canvas.width, canvas.height);
             ctx.drawImage(boardImg, 0, 0, canvas.width, canvas.height);
 
             invertColors = inverted;
             drawCheckers('first', whiteChecker, positions.first, currentPlayerType);
             drawCheckers('second', blackChecker, positions.second, currentPlayerType);
+
+            if (item && item.dice && item.dice.length >= 2 && !['double', 'take', 'win'].includes(item.action)) {
+                const [d1, d2] = item.dice;
+                const diceY = 350;
+                let diceX1, diceX2;
+                let diceSet;
+                if (invertColors) {
+                    if (currentPlayerType === 'first') {
+                        diceX1 = 130;
+                        diceX2 = 220;
+                        diceSet = diceImages.white;
+                    } else {
+                        diceX1 = 530;
+                        diceX2 = 620;
+                        diceSet = diceImages.black;
+                    }
+                } else {
+                    if (currentPlayerType === 'first') {
+                        diceX1 = 530;
+                        diceX2 = 620;
+                        diceSet = diceImages.white;
+                    } else {
+                        diceX1 = 130;
+                        diceX2 = 220;
+                        diceSet = diceImages.black;
+                    }
+                }
+                if (diceSet[d1]) ctx.drawImage(diceSet[d1], diceX1, diceY, 60, 60);
+                if (diceSet[d2]) ctx.drawImage(diceSet[d2], diceX2, diceY, 60, 60);
+            }
         }
 
         function animateSingleMove(move, playerType, temp_positions, callback) {
@@ -618,7 +648,7 @@
                 const currentX = fromX + (toX - fromX) * easedProgress;
                 const currentY = fromY + (toY - fromY) * easedProgress;
 
-                drawBoardForAnimation(temp_positions, nextPlayerType);
+                drawBoardForAnimation(temp_positions, nextPlayerType, item);
                 ctx.drawImage(img, currentX - 31.25, currentY - 31.25, 62.5, 62.5);
 
                 if (progress < 1) {
@@ -636,7 +666,7 @@
             animate();
         }
 
-        function animateHit(move, playerType, temp_positions, finalCallback) {
+        function animateHit(move, playerType, temp_positions, finalCallback, item = null) {
             const hitPlayerType = playerType === 'first' ? 'second' : 'first';
             const img = hitPlayerType === 'first' ? whiteChecker : blackChecker;
             const opp_pos = temp_positions[hitPlayerType];
@@ -673,7 +703,7 @@
                 const currentX = fromX + (barX - fromX) * easedProgress;
                 const currentY = fromY + (toY - fromY) * easedProgress;
 
-                drawBoardForAnimation(temp_positions, nextPlayerType);
+                drawBoardForAnimation(temp_positions, nextPlayerType, item);
                 ctx.drawImage(img, currentX - 31.25, currentY - 31.25, 62.5, 62.5);
 
                 if (progress < 1) {
@@ -718,6 +748,7 @@
             if (current >= data.length - 1) return;
             animating = true;
             updateButtons();
+            moveInfo.textContent = "Animating...";
 
             const nextTurn = data[current];
             const playerType = nextTurn.turn === 'first' ? 'first' : 'second';
@@ -763,7 +794,7 @@
                                 animateHit(move, playerType, temp_positions, () => {
                                     moveIndex++;
                                     setTimeout(animateMoves, 100);
-                                });
+                                }, item);
                             } else {
                                 moveIndex++;
                                 setTimeout(animateMoves, 100);
